test/functional/Sema/minimal_overload_test.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// Simple overloaded function test
func add(x: Int) -> Int {
    return x;
}

func add(x: Float) -> Float {
    return x;
}

func main() -> Int {
    // This should cause an argument conversion error and show available overloads
    let result = add(true);  // Bool cannot convert to Int or Float
    // CHECK: 16:18: error: Cannot convert ? to (Bool) -> ?
    // CHECK: 6:1: note: Available overload: (Int32) -> Int32
    // CHECK: 10:1: note: Available overload: (Float32) -> Float32

    return 0;
}
